<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="4dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/pad_10dp"
            android:paddingLeft="@dimen/pad_10dp"
            android:paddingRight="@dimen/pad_10dp"
            android:paddingTop="@dimen/pad_10dp">

            <Button
                android:id="@+id/btnHeader"
                style="@style/btn_black_header"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/pad_40dp"
                android:layout_marginTop="@dimen/pad_5dp"
                android:gravity="start|center_vertical"
                android:paddingLeft="@dimen/pad_10dp"
                android:text="@string/registration"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/editTextFname"
                style="@style/editext_graybg"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/pad_40dp"
                android:layout_marginBottom="@dimen/pad_5dp"
                android:layout_marginTop="@dimen/pad_5dp"
                android:hint="@string/first_name" />

            <EditText
                android:id="@+id/editTextMname"
                style="@style/editext_graybg"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/pad_40dp"
                android:layout_marginBottom="@dimen/pad_5dp"
                android:hint="@string/middle_name" />

            <EditText
                android:id="@+id/editTextLname"
                style="@style/editext_graybg"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/pad_40dp"
                android:layout_marginBottom="@dimen/pad_5dp"
                android:hint="@string/last_name" />

            <EditText
                android:id="@+id/editTextContactNumber"
                style="@style/editext_graybg"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/pad_40dp"
                android:layout_marginBottom="@dimen/pad_5dp"
                android:hint="@string/contact_number"
                android:inputType="number" />

            <EditText
                android:id="@+id/editTextEmail"
                style="@style/editext_graybg"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/pad_60dp"
                android:layout_marginTop="@dimen/pad_5dp"
                android:hint="@string/email">

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/editTextPassword"
                style="@style/editext_graybg"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/pad_60dp"
                android:layout_marginBottom="@dimen/pad_5dp"
                android:layout_marginTop="@dimen/pad_5dp"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/editTextConfirmPassword"
                style="@style/editext_graybg"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/pad_60dp"
                android:layout_marginBottom="@dimen/pad_10dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btnSignUp"
                style="@style/btn_white_large"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/pad_60dp"
                android:text="@string/sign_up"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/btnHaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/pad_15dp"
                android:layout_marginTop="@dimen/pad_10dp"
                android:clickable="true"
                android:text="@string/already_have_account"
                android:textColor="@color/myPrimaryColor"
                android:textSize="@dimen/txt_12sp"
                android:textStyle="bold" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</ScrollView>