<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/pad_20dp"
    android:paddingRight="@dimen/pad_20dp"

    >


    <ImageView
        android:id="@id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:src="@drawable/ccb" />


    <!--<EditText-->
        <!--android:id="@+id/editTextSecret"-->
        <!--style="@style/editext_graybg"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="@dimen/pad_60dp"-->
        <!--android:layout_marginBottom="@dimen/pad_5dp"-->
        <!--android:layout_marginTop="@dimen/pad_5dp"-->
        <!--android:drawableLeft="@mipmap/ic_pwd"-->
        <!--android:hint="@string/client_secret" />-->

    <EditText
        android:id="@+id/editTextUsername"
        style="@style/editext_graybg"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/pad_60dp"
        android:drawableLeft="@mipmap/ic_username"
        android:hint="@string/email"
        >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextPassword"
        style="@style/editext_graybg"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/pad_60dp"
        android:layout_marginBottom="@dimen/pad_10dp"
        android:layout_marginTop="@dimen/pad_5dp"
        android:drawableLeft="@mipmap/ic_pwd"
        android:hint="@string/password"
        android:inputType="textPassword" />


    <Button
        android:id="@+id/btnLogin"
        style="@style/btn_white_large"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/pad_60dp"
        android:text="@string/log_in"
        android:textColor="@color/white" />

    <TextView
        android:id="@id/btnReg"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad_10dp"

        android:text="@string/register"
        android:textColor="@color/myPrimaryColor"
        android:textSize="@dimen/txt_14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@id/btnForgot"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad_5dp"
        android:layout_marginBottom="@dimen/pad_10dp"
        android:text="@string/forgot_my_pwd"
        android:textColor="@color/myPrimaryColor"
        android:textSize="@dimen/txt_12sp" />
</LinearLayout>
