<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <SearchView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/searchView"
        android:queryHint="@string/search"
        android:layout_marginRight="5dp"
        android:layout_marginEnd="5dp"
        android:iconifiedByDefault="false"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignLeft="@+id/textViewCreate"
        android:layout_alignStart="@+id/textViewCreate"
        android:layout_toLeftOf="@+id/textViewCreate"
        android:layout_toStartOf="@+id/textViewCreate" />

    <TextView style="@style/button_inner_tab"
        android:id="@+id/textViewCreate"
        android:text="@string/help"/>

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/listView"
        android:layout_below="@+id/searchView"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/textViewEmpty"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/list_is_empty"
        android:layout_below="@+id/searchView"
        android:visibility="gone"/>

</RelativeLayout>