<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context="ccb.solutionsresource.com.activity.AddTicket">

    <include
        android:id="@+id/toolbar_actionbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:layout_below="@+id/toolbar_actionbar">

    <android.support.v7.widget.CardView
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/pad_5dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp"
        >


    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/pad_10dp"
    android:paddingLeft="@dimen/pad_10dp"
    android:paddingRight="@dimen/pad_10dp"
    >

    <Button
    android:id="@+id/btnHeader"
    style="@style/btn_black_header"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/pad_40dp"
    android:gravity="left|center_vertical"
    android:paddingLeft="@dimen/pad_10dp"
    android:text="Incident Details"
    android:textColor="@color/white"
        android:layout_marginTop="@dimen/pad_5dp"/>


    <EditText
    android:id="@+id/editTextDate"
    style="@style/editext_graybg"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/pad_40dp"
    android:layout_marginBottom="@dimen/pad_5dp"
    android:layout_marginTop="@dimen/pad_5dp"
    android:hint="@string/date"></EditText>


    <EditText
    android:id="@+id/editTextTime"
    style="@style/editext_graybg"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/pad_40dp"
    android:layout_marginBottom="@dimen/pad_5dp"
    android:hint="@string/time"

    ></EditText>


    <EditText
    android:id="@+id/editTextAgency"
    style="@style/editext_graybg"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/pad_40dp"
    android:layout_marginBottom="@dimen/pad_5dp"
    android:hint="@string/what_agency"></EditText>

    <EditText
    android:id="@+id/editTextConactNumber"
    style="@style/editext_graybg"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/pad_40dp"
    android:layout_marginBottom="@dimen/pad_5dp"
    android:hint="@string/who_to_complaint"></EditText>


    <EditText
    android:id="@+id/editTextEmail"
    style="@style/editext_graybg"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="@dimen/pad_5dp"
    android:ems="10"
    android:gravity="left|top"
    android:hint="@string/details_about_incident"
    android:inputType="textMultiLine"
    android:padding="@dimen/pad_10dp">

    <requestFocus />
    </EditText>

    </LinearLayout>
    </android.support.v7.widget.CardView>
    </ScrollView>

</RelativeLayout>

