<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/pad_5dp"
        android:layout_marginTop="@dimen/pad_10dp">

        <Button
            android:id="@+id/btnNewAgency"
            style="@style/btn_white_small"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/pad_40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/pad_30dp"
            android:layout_marginStart="@dimen/pad_10dp"
            android:layout_marginTop="@dimen/pad_5dp"
            android:paddingLeft="@dimen/pad_10dp"
            android:paddingRight="@dimen/pad_10dp"
            android:text="@string/add_new"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/pad_50dp"
            android:layout_toStartOf="@id/btnNewAgency"
            android:iconifiedByDefault="false"
            android:queryHint="@string/search" />

    </RelativeLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/container" />

    <TextView
        android:id="@+id/textViewEmpty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/container"
        android:gravity="center"
        android:text="@string/list_is_empty"
        android:textSize="20sp"
        android:visibility="gone" />

</RelativeLayout>