<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_actionbar"
        android:fillViewport="true">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/pad_5dp"
            android:layout_marginBottom="@dimen/pad_10dp"
            card_view:cardElevation="4dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="@dimen/pad_10dp"
                android:paddingLeft="@dimen/pad_10dp"
                android:paddingRight="@dimen/pad_10dp">

                <LinearLayout
                    android:id="@+id/informationLinearLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/pad_5dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/editTextDate"
                        style="@style/editext_graybg"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/pad_40dp"
                        android:layout_marginBottom="@dimen/pad_5dp"
                        android:layout_marginRight="@dimen/pad_5dp"
                        android:enabled="false"
                        android:focusable="false"
                        android:hint="@string/date"
                        android:inputType="date" />

                    <EditText
                        android:id="@+id/editTextTime"
                        style="@style/editext_graybg"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/pad_40dp"
                        android:enabled="false"
                        android:hint="@string/time"
                        android:inputType="time"
                        android:focusable="false"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/editTextAgency"
                    style="@style/editext_graybg"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/pad_40dp"
                    android:layout_marginBottom="@dimen/pad_5dp"
                    android:hint="@string/what_agency"
                    android:focusable="false"
                    android:enabled="false"/>

                <EditText
                    android:id="@+id/editTextComplainee"
                    style="@style/editext_graybg"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/pad_40dp"
                    android:layout_marginBottom="@dimen/pad_5dp"
                    android:hint="@string/who_to_complaint"
                    android:inputType="textCapSentences"
                    android:focusable="false"
                    android:enabled="false"/>

                <EditText
                    android:id="@+id/editTextSubject"
                    style="@style/editext_graybg"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/pad_40dp"
                    android:hint="@string/subject"
                    android:inputType="textCapSentences"
                    android:focusable="false"
                    android:enabled="false"/>


                <EditText
                    android:id="@+id/editTextIncidentDetails"
                    style="@style/editext_graybg"
                    android:layout_width="fill_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="@dimen/pad_5dp"
                    android:ems="10"
                    android:gravity="left|top"
                    android:hint="@string/details_about_incident"
                    android:inputType="textMultiLine"
                    android:maxLength="255"
                    android:focusable="false"
                    android:padding="@dimen/pad_10dp"
                    android:enabled="false"/>


                <!--<TextView-->
                    <!--android:id="@+id/textViewAddAttachment"-->
                    <!--style="@style/button_inner_tab"-->
                    <!--android:layout_gravity="right"-->
                    <!--android:clickable="true"-->
                    <!--android:drawableLeft="@drawable/hs_add_attachment_img"-->
                    <!--android:text="@string/add_attachment" />-->


            </LinearLayout>
        </android.support.v7.widget.CardView>
    </ScrollView>
</RelativeLayout>

