<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="0dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/pad_50dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/pad_5dp">

            <EditText
                android:id="@+id/editTextComment"
                style="@style/editext_graybg"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/pad_50dp"
                android:ems="10"
                android:gravity="left|top"
                android:hint="@string/comment_details"
                android:inputType="textMultiLine"
                android:maxLength="255"
                android:padding="@dimen/pad_10dp"
                android:textColor="@color/black" />

            <LinearLayout
                android:id="@+id/attachmentLinearLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewAddAttachment"
                    style="@style/button_inner_tab"
                    android:clickable="true"
                    android:drawableLeft="@drawable/hs_add_attachment_img"
                    android:text="@string/add_attachment" />

                <TextView
                    android:id="@+id/textViewCounter"
                    android:gravity="end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/character_counter" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llAttachment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <include layout="@layout/fragment_file_attachment" />

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>